[package]
name = "processor"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
ethers-contract = "*"

[dependencies]
ethabi = "18.0.0"
hex = "0.4.3"
ethers-contract = { version = "2.0.9", features = ["rustls"] }
ethers-core = "2.0.9"
ethers-providers = { version = "2.0.9", features = ["rustls"] }
async-trait = "0.1.73"
chrono = "0.4.31"
model = { git = "https://github.com/actor-protocol/models" }
thiserror = "1.0.49"
tokio = "1.32.0"
validator = "0.16.1"
rand = "0.8.5"
derivative = "2.2.0"
